# manufacturing-process-excellence-toolkit

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  toolkit_app.py
automotive_body_fit/: __init__.py  analysis.py  cli.py  plots.py  report.py
case_studies/: body_fit_process_launch.md  fixture_variation_reduction.md  line_redesign_and_balancing.md  vision_inspection_commissioning.md
data/: automotive_body_fit_100_samples.csv  engineering_lessons.csv  synthetic_defect_data.csv  synthetic_gage_rr_data.csv  synthetic_oee_data.csv  synthetic_pfmea.csv
manufacturing_toolkit/: __init__.py  cli.py  gage_rr.py  improvement.py  oee.py  pfmea.py  process_data.py  report.py
output/: Automotive_Body_Fit_Cp_Cpk_Report.docx  Manufacturing_Process_Excellence_Toolkit_Report.docx
scripts/: generate_demo_data.py
tests/: test_analysis.py  test_toolkit.py  test_v2_intelligence.py
v1_interactive_capability/: app.py
v2_manufacturing_intelligence/: README.md  __init__.py  analytics.py  app.py  bm25_engine.py  briefing.py  reporting.py
